@@ -1,7 +1,6 @@
 
 ## RcppZiggurat: Rcpp Bindings for Ziggurat RNGs
 
-[![Build Status](https://travis-ci.org/eddelbuettel/rcppziggurat.svg)](https://travis-ci.org/eddelbuettel/rcppziggurat) 
 [![CI](https://github.com/eddelbuettel/rcppziggurat/workflows/ci/badge.svg)](https://github.com/eddelbuettel/rcppziggurat/actions?query=workflow%3Aci)
 [![License](http://img.shields.io/badge/license-GPL%20%28%3E=%202%29-brightgreen.svg?style=flat)](http://www.gnu.org/licenses/gpl-2.0.html) 
 [![CRAN](http://www.r-pkg.org/badges/version/RcppZiggurat)](https://cran.r-project.org/package=RcppZiggurat) 
