@@ -1,3 +1,7 @@
+2021-12-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Remove unused continuous integration artifact and badge
+
 2021-10-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* man/ziggurat.Rd: Refinement of doi use in Rd file
